2002-03-27  Elliot Glaysher  <glaysher@umich.edu>

	* lib/spex: Comic appears to have died.
	* lib/sluggy_freelance (sluggy): Note to self: Remove your debugging
	messages BEFORE making a commit.

2002-03-27  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* Netcomics/HTML/Set.pm (create_set_of_pages): Updated elements
	to replace to match everything in Page.pm.  Added replacing common
	elements & simplified code.  Added creating a symlink to the
	standard webpage index filename if multiple index pages.
	* Netcomics/HTML/Page.pm (generate): Fixed links section to grab
	the one with the link to the index if generated.  Made the top
	links & bottom links different to match up with the index of the
	first & last comic on each page.  Made all sections parsed for
	common elements to replace.
	* doc/netcomics.pod: Fixed -t not being surrounded by B<>.

2002-03-26  Elliot Glaysher  <glaysher@umich.edu>

	* Netcomics/Factory.pm (build_date_array):  Hopefully fix the date
	problems for *everybody* this time.

2002-03-26  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* lib/keenspot (youdamn): Changed to use an "exists" list instead
	of a "missing" list & updated it up to today.

2002-03-26  Elliot Glaysher  <glaysher@umich.edu>

	* lib/inktank (ww): Fix for Weekend Warriors by Chris Hostetter.
	* Netcomics/Factory.pm (build_date_array): Changed way I fixed the
	time problem.

2002-03-25  Elliot Glaysher  <glaysher@umich.edu>

	* lib/sluggy_freelance (sluggy): Fixed sluggy (wasn't getting all the
	images, since it was assumed that only sunday strips had multiple-
	images)
	* Netcomics/Util.pm (processSyms): Fixed type that was causing an
	annoying error

2002-03-25  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* Netcomics/Factory.pm (load_RLI_files): Fixed code that tests for
	file existance when the .rli file doesn't exist when not not
	separating comics into their own dirs.
	* lib/alexsrestaurant: moved alex over from nando & updated it for